objects/Tape__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Traffic</relationshipLabel>
        <relationshipName>Tapes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advertiser__c</fullName>
        <formula>Brand__r.Advertiser__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertiser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brands__c</referenceTo>
        <relationshipLabel>Traffic</relationshipLabel>
        <relationshipName>Tapes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_End__c</fullName>
        <label>Flight End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Start__c</fullName>
        <label>Flight Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISCI_2__c</fullName>
        <label>ISCI 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISCI_3__c</fullName>
        <label>ISCI 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISCI__c</fullName>
        <label>ISCI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>1710</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Traffic</relationshipLabel>
        <relationshipName>Tapes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rotation__c</fullName>
        <label>Rotation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>50-50 Split</fullName>
                </value>
                <value>
                    <fullName>Pattern</fullName>
                </value>
                <value>
                    <fullName>Limited Ratio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X800_Number__c</fullName>
        <label>800 Number</label>
        <type>Phone</type>
    </fields>
    <label>Traffic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Program__c</columns>
        <columns>Brand__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Flight_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>emily isaac</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>TKN</value>
        </filters>
        <label>TKN Traffic</label>
    </listViews>
    <listViews>
        <fullName>Cheaters</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Program__c</columns>
        <columns>Brand__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Flight_Start__c</columns>
        <columns>Flight_End__c</columns>
        <columns>ISCI__c</columns>
        <columns>ISCI_2__c</columns>
        <columns>ISCI_3__c</columns>
        <columns>Length__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flight_End__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>Cheaters Strip</value>
        </filters>
        <label>Cheaters</label>
    </listViews>
    <listViews>
        <fullName>Hollywood_Today_Live_Traffic</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Program__c</columns>
        <columns>Brand__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Flight_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Cornelia Batu</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Hollywood Today live</value>
        </filters>
        <label>Hollywood Today Live Traffic</label>
    </listViews>
    <listViews>
        <fullName>Real_Life_101_Traffic</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Program__c</columns>
        <columns>Brand__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Flight_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Cornelia Batu</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Real Life 101</value>
        </filters>
        <label>Real Life 101 Traffic</label>
    </listViews>
    <listViews>
        <fullName>Ron_Hazelton_Traffic</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Program__c</columns>
        <columns>Brand__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Flight_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Cornelia Batu</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Ron Hazelton</value>
        </filters>
        <label>Ron Hazelton Traffic</label>
    </listViews>
    <listViews>
        <fullName>Security_Brief_Traffic</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Program__c</columns>
        <columns>Brand__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Flight_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>lindsay maiello</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Security Brief</value>
        </filters>
        <label>Security Brief Traffic</label>
    </listViews>
    <listViews>
        <fullName>Showcase_9_Traffic</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Program__c</columns>
        <columns>Brand__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Flight_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Cornelia Batu</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Showcase 9</value>
        </filters>
        <label>Showcase 9 Traffic</label>
    </listViews>
    <listViews>
        <fullName>Wild_America_Traffic</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Program__c</columns>
        <columns>Brand__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Flight_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Cornelia Batu</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Wild America</value>
        </filters>
        <label>Wild America Traffic</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Traffic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_Enter_Start_End_Length</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISBLANK(Flight_Start__c)=TRUE,ISBLANK( Flight_End__c)=TRUE,ISBLANK(TEXT(Length__c))=TRUE)</errorConditionFormula>
        <errorMessage>Must select a Length, Flight Start and Flight End date to save the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Changes_in_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Flight_Start__c)=TRUE</errorConditionFormula>
        <errorMessage>Cannot change the flight start date after record is created.</errorMessage>
    </validationRules>
</CustomObject>